--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="myApp" ng-controller="myCtrl">
   <head>
-    <title>Taproom</title>
+    <title>ZooLog</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="build/js/vendor.min.js"></script>
@@ -14,8 +14,7 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <!-- 2. Configure SystemJS -->
     <script src="system.config.js"></script>
-
-    <!-- <link rel="stylesheet" href="build/css/styles.css"> -->
+    <link rel="stylesheet" href="build/css/styles.css">
     <script>
       System.import('app').catch(function(err){ console.error(err); });
     </script>
@@ -23,7 +22,15 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <app-root>Loading...</app-root>
-
+    <div class="container-fluid">
+          <div id="header" class="row">
+            <center><img src="/resources/images/logo3.jpeg"></center>
+          </div>
+          <div class="appRoot">
+            <app-root>Loading...</app-root>
+          </div>
+          <div class="well" id="searchResult"></div>
+          <div class="well" id="showErrors"></div>
+        </div>
   </body>
 </html>
