--- a/index.html
+++ b/index.html
@@ -21,16 +21,13 @@
 
   </head>
   <!-- 3. Display the application -->
-  <body>
+  <body id="body">
     <div class="container-fluid">
-          <div id="header" class="row">
-            <center><img src="/resources/images/logo3.jpeg"></center>
-          </div>
-          <div class="appRoot">
-            <app-root>Loading...</app-root>
-          </div>
-          <div class="well" id="searchResult"></div>
-          <div class="well" id="showErrors"></div>
-        </div>
+      <div id="header" class="row">
+        <center><img src="/resources/images/logo3.jpeg"></center>
+      </div>
+      <div ></div>
+      <div class="appRoot"><app-root>Loading...</app-root></div>
+    </div>
   </body>
 </html>
