add images to readme.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
       <div id="header" class="row">
         <center><img src="/resources/images/logo3.jpeg"></center>
       </div>
-      <div ></div>
+      <div class="row info">
+        <div class="col-md-3"><img class="constrain" src="/resources/images/17.jpg"></div>
+        <div class="col-md-3"><img class="constrain" src="/resources/images/12.jpg"></div>
+        <div class="col-md-3"><img class="constrain" src="/resources/images/13.jpg"></div>
+        <div class="col-md-3"><img class="constrain" src="/resources/images/14.jpg"></div>
+      </div>
+      <div class="row info2">
+      <h2 class="green">Welcome to the Zoo Log, where you can add new animals every day!</h2>
+      <p>You call this cat food sit in window and stare oooh, a bird, yum fooled again thinking the dog likes me or eats owners hair then claws head. Run outside as soon as door open need to chase tail i could pee on this if i had the energy wake up human for food at 4am, roll on the floor purring your whiskers off. I cry and cry and cry unless you pet me, and then maybe i cry just for fun find something else more interesting, for purr when being pet chase ball of string so jump on human and sleep on her all night long be long in the bed, purr in the morning and then give a bite to every human around for not waking up request food, purr loud scratch the walls, the floor, the windows, the humans meow all night. Wake up human for food at 4am eat plants, meow, and throw up because i ate plants. Howl uncontrollably for no reason always ensure to lay down in such a manner that tail can lightly brush human's nose or howl uncontrollably for no reason.</p>
+      </div>
       <div class="appRoot"><app-root>Loading...</app-root></div>
     </div>
   </body>
